@@ -1216,6 +1216,12 @@ sub Get_OperStatus_Description_Index {
             $Desc = "($MacAddress)";
             logger(2, "Interface with index $Index has no description.\nSet it to $Desc");
         }
+
+        # Interface description reformating with specific node types
+        # Cisco ASA 55xx series
+        if ($Desc =~ /^Adaptive Security Appliance '(.*)' interface$/) {
+            $Desc="$1";
+        }
         
         # normalize the interface description to not get into trouble
         # with special characters and how Config::General handles blanks
